# hs-service-benchmark-tool

./: .travis.yml  README.md  Setup.hs  index.html  index.md  params.json  service-benchmark-tool.cabal  service-benchmark.cabal
_layouts/: index.html
main/: Main.hs
src/Network/: Benchmark.hs
src/Network/Benchmark/: ColorOption.hs  Logger.hs  Utils.hs
test/: EchoServer.hs  StreamsVsClient.hs  Timeout.hs
test/StreamsVsClient/: README.md  StreamsVsClient.hs  results-no-timeout.html  results.html
test/Timeout/: Timeout.hs  results.html
