Name: service-benchmark-tool
Version: 0.0.1
Synopsis: Tools for benchmarking services over a network connection
Description: Tools for benchmarking services over a network connectyion
Homepage: https://github.com/alephcloud/hs-service-benchmark-tool
License: Apache-2.0
Author: Lars Kuhtz <lkuhtz@pivotmail.com>
Maintainer: Lars Kuhtz <lkuhtz@pivotmail.com>
Copyright: Copyright (c) 2013-2014 PivotCloud, Inc.
Category: tools
Build-type: Custom
Cabal-version: >= 1.18
License-file: LICENSE

extra-doc-files:
    README.md,
    CHANGELOG.md

extra-source-files:
    constraints

source-repository head
    type: git
    location: https://github.com/alephcloud/hs-service-benchmark-tool

source-repository this
    type: git
    location: https://github.com/alephcloud/hs-service-benchmark-tool
    branch: master

Flag with-chart
    Description: Build applications with support for printing charts.
    Default: False
    Manual: True

Flag with-http-streams
    Description: Include support for http-streams
    Default: True
    Manual: True

Library
    default-language: Haskell2010
    hs-source-dirs: src

    exposed-modules:
        Network.Benchmark
        Network.Benchmark.Logger
        Network.Benchmark.Utils
        Network.Benchmark.ColorOption

    build-depends:
        async >= 2.0,
        aeson >= 0.7,
        ansi-terminal >= 0.6,
        base == 4.*,
        base-unicode-symbols >= 0.2,
        bytestring >= 0.10,
        case-insensitive >= 1.2,
        configuration-tools >= 0.2.8,
        containers >= 0.5,
        data-default >= 0.5,
        deepseq >= 1.3,
        dlist >= 0.7,
        either >= 4.3,
        enclosed-exceptions >= 1.0,
        errors >= 1.4.7,
        hoist-error >= 0.1,
        http-client >= 0.4,
        lens >= 4.6,
        lifted-async >= 0.2,
        lifted-base >= 0.2.3,
        monad-control >= 1.0,
        mtl >= 2.2,
        optparse-applicative >= 0.11,
        statistics >= 0.12,
        stm >= 2.4,
        text >= 1.2,
        thyme >= 0.3,
        trace >= 0.1,
        transformers >= 0.3,
        vector >= 0.10,
        vector-space >= 0.8

    if flag(with-chart)
        build-depends:
            Chart >= 1.3.2,
            Chart-cairo >= 1.2,
            colour >= 2.3

        cpp-options: -DWITH_CHART

    ghc-options: -Wall -O2

Executable service-benchmark-tool
    default-language: Haskell2010
    hs-source-dirs: main
    Main-is: Main.hs

    build-depends:
        ansi-terminal >= 0.6,
        base == 4.*,
        base-unicode-symbols >= 0.2,
        bytestring >= 0.10,
        case-insensitive >= 1.2,
        configuration-tools >= 0.2.8,
        http-client >= 0.4,
        http-types >= 0.8,
        lens >= 4.6,
        lifted-base >= 0.2.3,
        monad-control >= 1.0,
        mtl >= 2.2,
        optparse-applicative >= 0.11,
        service-benchmark-tool,
        text >= 1.2,
        transformers >= 0.3

    if flag(with-http-streams)
        cpp-options: -DWITH_HTTP_STREAMS

        build-depends:
            io-streams >= 1.2,
            http-streams >= 0.7

    ghc-options: -Wall -threaded -with-rtsopts=-N -O2

Executable echo-service
    default-language: Haskell2010
    hs-source-dirs: test
    Main-is: EchoServer.hs

    build-depends:
        service-benchmark-tool,

        aeson >= 0.8,
        base == 4.*,
        base-unicode-symbols >= 0.2,
        bytestring >= 0.10,
        case-insensitive >= 1.2,
        data-default >= 0.5,
        lens >= 4.6,
        scotty >= 0.9.1,
        text >= 1.2,
        transformers >= 0.4,
        wai >= 3.0,
        warp >= 3.0

    ghc-options: -Wall -threaded -O2 -with-rtsopts=-N

Executable example-server
    default-language: Haskell2010
    hs-source-dirs: main
    Main-is: Main.hs

    build-depends:
        service-benchmark-tool,

        aeson >= 0.8,
        base == 4.*,
        base-unicode-symbols >= 0.2,
        bytestring >= 0.10,
        case-insensitive >= 1.2,
        configuration-tools >= 0.2.8,
        http-client >= 0.4,
        http-types >= 0.8,
        lens >= 4.6,
        lifted-base >= 0.2.3,
        monad-control >= 1.0,
        mtl >= 2.2,
        optparse-applicative >= 0.11,
        scotty >= 0.9.1,
        text >= 1.2,
        transformers >= 0.4

    ghc-options: -Wall -threaded -O2 -with-rtsopts=-N
